--- a/index.html
+++ b/index.html
@@ -14,36 +14,198 @@
         <div class="felso">
             <nav>
                 <ul class="navigacio">
-                    <li class="kezdo"> <a href="http://127.0.0.1:5500/index.html"> Kezdőoldal</a></li>
+                    <li class="kezdo"> <a href="index.html"> Kezdőoldal</a></li>
                     <li> <a href="eleres.html"> Elérhetőség</a></li>
                     <li class="dropdown">
                         <a href="#">Hobbi</a>
                         <div class="dropdown-content">
-                            <a href="film.html" class="elvalaszto"><img src="logook/Kepkivagas2-transformed.png" alt="butonLogo" class="hobbiLogo"></a>
-                            <a href="jatek.html"> <img src="logook/gamLogo-transformed.png" alt="butonLogo" class="hobbiLogo"></a>
+                            <a href="film.html" class="elvalaszto"><img src="logook/Kepkivagas2-transformed.png"
+                                    alt="butonLogo" class="hobbiLogo"></a>
+                            <a href="jatek.html"> <img src="logook/gamLogo-transformed.png" alt="butonLogo"
+                                    class="hobbiLogo"></a>
                         </div>
-                      </li>
+                    </li>
                     <li> <a href="http://127.0.0.1:5500/projekt.html"> Projektek</a></li>
                 </ul>
             </nav>
 
-        <header>
-            <h1>
-                Üdvözlet
-            </h1>
-        </header>
-        
-    </div>
-    <div class="also">
-        <article>
+            <header>
+                <h1>
+                    Üdvözlet
+                </h1>
+            </header>
+        </div>
+        <div class="also">
+            <article>
+                <p class="bemutatkozas"> Mogyoródi Balázs vagyok és jelenleg a SZÁMALK-Szalézi Technikum és
+                    Szakgimnázium tanulója vagyok, Szoftverfejlesztő és tesztelő szakon. </p>
+                <p> Én előtte a Kispesti Waldorf Általános Iskola és Gimnáziumban tanultam, ami 5 évig tartott. Az
+                    állami érettségi letétele elött egy évvel a Waldorf érettségit is el kellet végeznem. </p>
+
+                <h2> Mi a Waldorf Érettségi?</h2>
+                <p>Ez a Waldorf iskolák sajátos záró vizsgái. Magyarországon a 12. évfolyamosoknak kell ezt letenni és
+                    csak utána válnak állami érettségi letételére jogosultak, amit az azt követő évben kell megírniuk.
+                </p>
+                <h3> Két fő része van:</h3>
+                <ul>
+                    <ol>
+                        Először egy színházi darabot kell szervezni az osztállyal közösen, amit nagy közönség számára
+                        kell előadni. A tanárok azt értékelik, hogy mennyire veszel részt a csoport munkában.
+                    </ol>
+                    <ol>
+                        Utána egy esszét kell írni, aminek minimum 20 oldalas szöveg hossza kell, hogy legyen. Ezt is
+                        végül nagy közönség elött kell előadni. A tanárok a kidolgozott esszét átnézik, hogy a tartalom
+                        megfelel-e. Nincsen benne plagizálás, elegendő hosszúságú az esszé és mennyire jól van
+                        kidolgozva a szerkezete. Végül még az előadás módot is értékelik.
+                    </ol>
+                </ul>
+
+
+
+                <div>
+
+
+                </div>
+
+
+
+
+
+
+
+
+        </div>
 
         </article>
-    </div>
+
+
+
+        <div class="tartalom">
+
+            <div class="szinhaz">
+                <div class="kiiras">
+                    <h2 class="cim"> Tóték</h2>
+
+                    <p> Örkény István egyik leghíresebb műve. Eredetileg filmforgatókönyvnek készült, de végül
+                        kisregényként jelent meg. Először a Kortárs című folyóirat augusztusi számában jelent meg
+                        1966-ban. Könyvként először 1967-ben jelent meg, a Nászutasok a légypapíron című kötetében.
+                        Szintén 1967-ben Örkény átdolgozta a kisregényt drámává, amelyet aztán nagy sikerrel játszottak
+                        a színházak, köztük én is a saját osztályommal. Én Cipriáné professzor karakterét alakítottam
+                        benne.
+                    </p>
+                </div>
+
+                <div class="szinhaziKep">
+                    <img src="logook/DSC03744.jpg" alt="" class="rolamKep">
+
+
+                </div>
+            </div>
+
+
+            <div class="ures"> </div>
+
+
+
+            <div class="tavoktatas">
+
+
+
+                <div class="kiiras">
+
+                    <h2 class="cim">Távoktatás</h2>
+
+                    <p>
+                        Én ezt a projektet 2021 és 2022 között készítettem. Mivel 2020-ban történt az, hogy bevezettek
+                        korlátozásokat a koronavírus járvány megfékezésére, ami ugyanakkor az oktatásra is hatással
+                        volt, mert mindenkinek át kellett állni digitális oktatásra. Mivel középiskolás diákként, én is
+                        megtapasztaltam, hogy milyen a távoktatás és milyen komoly hatást gyakorolt rám, és ezért
+                        gondoltam azt, hogy a Waldorf érettségihez ebben a témában írjak egy esszét.
+                    </p>
+                </div>
+
+                <div class="dokumentum">
+                    <h3> Ha kiváncsi vagy, akkor meg is tekintheted a teljes esszét!</h3>
+                    <div class="tavKep">
+                        <img src="logook/tavoktas.PNG" alt="tav" class="rolamKep">
+                    </div> <br>
+                    <div class="tavGomb">
+                        <a href="projektek/Mogyoródi Balázs Waldorf Érettségi.pdf" download="Távoktatás">
+                            <button class="projektem">
+                                Letöltés
+                            </button>
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+
+        <div class="erettsegi">
+            <h2> Érettségi eredményem</h2>
+            <table class="tablazat">
+                <thead class="fej">
+                    <tr class="fug">
+                        <td class="visz1"></td>
+                        <td class="visz">1</td>
+                        <td class="visz">2</td>
+                        <td class="visz">3</td>
+                        <td class="visz">4</td>
+                        <td class="visz">5</td>
+                    </tr>
+                </thead>
+                <tbody class="test">
+                    <tr class="fug">
+                        <td class="visz">Magyar</td>
+                        <td class="visz"></td>
+                        <td class="visz"></td>
+                        <td class="visz"></td>
+                        <td class="visz"></td>
+                        <td class="visz">x</td>
+                    </tr>
+                    <tr class="fug">
+                        <td class="visz">Történelem</td>
+                        <td class="visz"></td>
+                        <td class="visz"></td>
+                        <td class="visz"></td>
+                        <td class="visz">x</td>
+                        <td class="visz"></td>
+                    </tr>
+                    <tr class="fug">
+                        <td class="visz">Matematika</td>
+                        <td class="visz"></td>
+                        <td class="visz"></td>
+                        <td class="visz"></td>
+                        <td class="visz">x</td>
+                        <td class="visz"></td>
+                    </tr>
+                    <tr class="fug">
+                        <td class="visz">Angol</td>
+                        <td class="visz"></td>
+                        <td class="visz"></td>
+                        <td class="visz"></td>
+                        <td class="visz"></td>
+                        <td class="visz">x</td>
+                    </tr>
+                    <tr class="fug">
+                        <td class="visz">Informatika</td>
+                        <td class="visz"></td>
+                        <td class="visz"></td>
+                        <td class="visz"></td>
+                        <td class="visz">x</td>
+                        <td class="visz"></td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+
+
+
 
         <footer>
             <h4>
-            Mogyoródi Balázs
-        </h4>
+                Mogyoródi Balázs
+            </h4>
         </footer>
     </main>
 </body>
