--- a/jatek.html
+++ b/jatek.html
@@ -13,87 +13,320 @@
     <main>
         <div class="felso">
 
-        
-        <nav>
-            <ul class="navigacio">
-                <li class="kezdo"> <a href="http://127.0.0.1:5500/index.html"> Kezdőoldal</a></li>
-                <li> <a href="eleres.html"> Elérhetőség</a></li>
-                <li class="dropdown">
-                    <a href="#">Hobbi</a>
-                    <div class="dropdown-content">
-                        <a href="film.html" class="elvalaszto"><img src="logook/Kepkivagas2-transformed.png" alt="butonLogo" class="hobbiLogo"></a>
-                      <a href="jatek.html"> <img src="logook/gamLogo-transformed.png" alt="butonLogo" class="hobbiLogo"></a>
-                    </div>
-                  </li>
-                <li> <a href="http://127.0.0.1:5500/projekt.html"> Projektek</a></li>
-            </ul>
-        </nav>
 
-        <header>
-            <h1>
-                Hobbiaim
-            </h1>
-        </header>
-    </div>
-    <div class="also">
-        <article class="hobbiSzeret">
-            <h2> Miért pont játékok? </h2>
-            <p> Nehéz erre egyszerű magyarázatot adni, ugyanis ennek rengeteg oka van. Próbálok néhány egyértelmű magyarázatot adni erre a kérdésre. <br>
-                Én elsősorban azért szeretek filmet nézni, mert nagyon jó beszéd témát tud adni. Itt nem arra gondolok, hogy kibeszélni miért volt jó, vagy rossz az adott film. Inkább arra, hogy milyen érzéseket és új gondolatokat gerjesztet bennem és ezeket megosztani másokkal. <br>
-                Emellett különböző hatásokat is kivált, ami persze függ a saját hangulatomtól és a film műfajától. Kiválthat nevetést, megdöbbenést, izgalmat, meghatotséágot, vagy akár félelmet. Ezeknek az élményeknek köszönhetően a filmnézés számomra szórakoztató tevékenység.
-                Nem csak jó filmek lehetnek rám ilyen hatással, hanem hasonlóan rossz filmek is adhatnak egyfajta élményt. Van, hogyy megbotránkoztat, megnevetett, vagy kinossá teszi a hangulatot. Persze ezek közül csak az a jó, rossz film, hogy ha megnevetett. Én azt gondolom, hogy azok a filmek amiknél, a másik két film élmény érvényesül annak is lehet egyfajat pozitív végkifejleti élmény. Persze ez nem a film nézésénél történik meg, hanem a film kibeszélésénél. <br>
-                Mivel van egy barátom, aki film készítéssel foglalkozik (vagyis tanulja), ezért filmek elemzésével is szoktam foglalkozni. Ezek a filmek amiket elsősorban elemzünk, azok más diákok vizsga filmjei. Itt nem csak a történet logikáira, a fizikai törvények megszegésére gondolok, hanem apró film technikai apróságokra. Példál vágás, jelenet fényelése, beálási képek. 
-            </p>
-            <p> Én E-miatt nézek filmeket hobbi szinten.</p>
+            <nav>
+                <ul class="navigacio">
+                    <li class="kezdo"> <a href="index.html"> Kezdőoldal</a></li>
+                    <li> <a href="eleres.html"> Elérhetőség</a></li>
+                    <li class="dropdown">
+                        <a href="#">Hobbi</a>
+                        <div class="dropdown-content">
+                            <a href="film.html" class="elvalaszto"><img src="logook/Kepkivagas2-transformed.png"
+                                    alt="butonLogo" class="hobbiLogo"></a>
+                            <a href="jatek.html"> <img src="logook/gamLogo-transformed.png" alt="butonLogo"
+                                    class="hobbiLogo"></a>
+                        </div>
+                    </li>
+                    <li> <a href="http://127.0.0.1:5500/projekt.html"> Projektek</a></li>
+                </ul>
+            </nav>
+            <header>
+                <h1>
+                    Hobbijaim
+                </h1>
+            </header>
+        </div>
+        <div class="also">
+            <article class="hobbiSzeret">
+                <h2> Miért pont videojáték? </h2>
+                <p> Nehéz erre egyszerű magyarázatot adni, ugyanis ennek rengeteg oka van. Próbálok néhány egyértelmű
+                    magyarázatot adni erre a kérdésre. <br>
+                    Én elsősorban azért szeretek filmet nézni, mert nagyon jó beszéd témát tud adni. Itt nem arra
+                    gondolok, hogy kibeszélni miért volt jó, vagy rossz az adott film. Inkább arra, hogy milyen
+                    érzéseket és új gondolatokat gerjesztet bennem és ezeket megosztani másokkal. <br>
+                    Emellett különböző hatásokat is kivált, ami persze függ a saját hangulatomtól és a film műfajától.
+                    Kiválthat nevetést, megdöbbenést, izgalmat, meghatotséágot, vagy akár félelmet. Ezeknek az
+                    élményeknek köszönhetően a filmnézés számomra szórakoztató tevékenység.
+                    Nem csak jó filmek lehetnek rám ilyen hatással, hanem hasonlóan rossz filmek is adhatnak egyfajta
+                    élményt. Van, hogyy megbotránkoztat, megnevetett, vagy kinossá teszi a hangulatot. Persze ezek közül
+                    csak az a jó, rossz film, hogy ha megnevetett. Én azt gondolom, hogy azok a filmek amiknél, a másik
+                    két film élmény érvényesül annak is lehet egyfajat pozitív végkifejleti élmény. Persze ez nem a film
+                    nézésénél történik meg, hanem a film kibeszélésénél. <br>
+                    Mivel van egy barátom, aki film készítéssel foglalkozik (vagyis tanulja), ezért filmek elemzésével
+                    is szoktam foglalkozni. Ezek a filmek amiket elsősorban elemzünk, azok más diákok vizsga filmjei.
+                    Itt nem csak a történet logikáira, a fizikai törvények megszegésére gondolok, hanem apró film
+                    technikai apróságokra. Példál vágás, jelenet fényelése, beálási képek.
+                </p>
+                <p> Én emiatt játszok viedó játékokkal hobbiból.</p>
 
-        </article>
-    </div>
+            </article>
+        </div>
 
 
 
-            <aside>
+        <aside>
             <div class="hobbi">
+                <div class="hobbiCim">
+                    <h3 class="mediaCim"> EarthBound</h3>
+                </div>
+                <div class="hobbiUres"></div>
                 <div class="hobbiKiiras">
-                    <h3 class="mediaCim"> Brazil</h3>
-                    <p> A Brazil 1985-ben készült, drámai, szatirikus és komikus elemekkel átszőtt anti-utópisztikus világképet bemutató film. Rendezte Terry Gilliam, a Monty Python társulat tagja. A forgatókönyvet a rendező Terry Gilliam, Charles McKeown és Tom Stoppard írta. </p>
+
+                    <p> A Japánban Mother 2: Gīgu no Gyakushū néven kiadott EarthBound egy szerepjátékos videojáték,
+                        amelyet az Ape Inc. és a HAL Laboratory fejlesztett ki, és a Nintendo adott ki a Super Nintendo
+                        Entertainment System számára. </p>
+
+
+                </div>
+
+                <div class="hobbiVideo">
+                    <iframe src="https://www.youtube.com/embed/vGOEMCG2Ll4" title="YouTube video player" frameborder="0"
+                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                        allowfullscreen class="video"></iframe>
+
+
+                </div>
+            </div>
+            <div class="hobbi">
+                <div class="hobbiCim">
+                    <h3 class="mediaCim">The Legend of Zelda: Breath of the Wild</h3>
+                </div>
+                <div class="hobbiUres"></div>
+                <div class="hobbiKiiras">
+
+                    <p> A The Legend of Zelda: Breath of the Wild egy akció-kalandjáték, amit a Nintendo fejlesztett és
+                        adta ki a Nintendo Switch és Wii U konzolokra. A Breath of the Wild a The Legend of Zelda
+                        franchise tizenkilencedik része és a Zelda sorozat idővonalának végén játszódik. </p>
 
 
                 </div>
 
                 <div class="hobbiVideo">
 
-                    <iframe  src="https://www.youtube.com/embed/ZKPFC8DA9_8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen class="video"></iframe>
-
+                    <iframe src="https://www.youtube.com/embed/zw47_q9wbBE" title="YouTube video player" frameborder="0"
+                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                        allowfullscreen class="video"></iframe>
 
 
                 </div>
             </div>
             <div class="hobbi">
+                <div class="hobbiCim">
+                    <h3 class="mediaCim"> BioShock: The Collection </h3>
+                </div>
+                <div class="hobbiUres"></div>
                 <div class="hobbiKiiras">
-                    <h3 class="mediaCim"> Brazil</h3>
-                    <p> A Brazil 1985-ben készült, drámai, szatirikus és komikus elemekkel átszőtt anti-utópisztikus világképet bemutató film. Rendezte Terry Gilliam, a Monty Python társulat tagja. A forgatókönyvet a rendező Terry Gilliam, Charles McKeown és Tom Stoppard írta. </p>
+
+                    <p> A BioShock belső nézetű, lövöldözős játék, amelyet az Irrational Games (akkoriban 2K Boston)
+                        fejlesztett és a 2K Games kiadásában jelent meg. Mind három rész egy posztapokaliptikus
+                        városoban játszodik. Az 1. és a 2. részben a Rapture nevű víz alatti városban és a harmadik
+                        (BioShock Infinite) Columbia repülő városában. </p>
 
 
                 </div>
 
                 <div class="hobbiVideo">
 
-                    <iframe  src="https://www.youtube.com/embed/ZKPFC8DA9_8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen class="video"></iframe>
+                    <iframe src="https://www.youtube.com/embed/-UaeVy-tutU" title="YouTube video player" frameborder="0"
+                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                        allowfullscreen class="video"></iframe>
 
 
 
                 </div>
             </div>
+            <div class="hobbi">
+                <div class="hobbiCim">
+                    <h3 class="mediaCim"> Super Smash Bros. Ultimate</h3>
+                </div>
+                <div class="hobbiUres"></div>
+                <div class="hobbiKiiras">
+
+                    <p> A Super Smash Bros. Ultimate egy 2018-as japán crossover harci játék, amelyet a Bandai Namco
+                        Studios és a Sora Ltd. fejlesztett ki, és a Nintendo adott ki Nintendo Switch konzolra. Ez az
+                        ötödik része a Super Smash Bros. sorozatnak. </p>
+
+
+                </div>
+
+                <div class="hobbiVideo">
+
+
+                    <iframe src="https://www.youtube.com/embed/EXnbMp1yr1k" title="YouTube video player" frameborder="0"
+                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                        allowfullscreen class="video"></iframe>
+
+
+                </div>
+            </div>
+
+
+            <div class="hobbi">
+                <div class="hobbiCim">
+                    <h3 class="mediaCim"> XCOM: Enemy Unknown</h3>
+                </div>
+                <div class="hobbiUres"></div>
+                <div class="hobbiKiiras">
+
+                    <p> Az XCOM: Enemy Unknown egy 2012-ben kiadott körökre osztott taktikai videojáték, amelyet a
+                        Firaxis Games fejlesztett és a 2K Games adott ki. A játék az 1994-es kultikus, klasszikus
+                        stratégiai játék, az X-COM: UFO Defense "újragondolt" remake-je. </p>
+
+
+                </div>
+
+                <div class="hobbiVideo">
+
+
+                    <iframe src="https://www.youtube.com/embed/YPvbF7bG7lk" title="YouTube video player" frameborder="0"
+                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                        allowfullscreen class="video"></iframe>
+
+                </div>
+            </div>
+            <div class="hobbi">
+                <div class="hobbiCim">
+                    <h3 class="mediaCim"> Cuphead</h3>
+                </div>
+                <div class="hobbiUres"></div>
+                <div class="hobbiKiiras">
+
+                    <p> A Cuphead egy "run and gun" stílusú indie videójáték, amit Chad és Jared Moldenhauer fejlesztett
+                        ki. 2017-ben jelent meg. </p>
+
+
+                </div>
+
+                <div class="hobbiVideo">
+
+
+                    <iframe src="https://www.youtube.com/embed/NN-9SQXoi50" title="YouTube video player" frameborder="0"
+                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                        allowfullscreen class="video"></iframe>
+
+                </div>
+            </div>
+
+
+            <div class="hobbi">
+                <div class="hobbiCim">
+                    <h3 class="mediaCim"> Wacky Races (2000)</h3>
+                </div>
+                <div class="hobbiUres"></div>
+                <div class="hobbiKiiras">
+
+                    <p> Wacky Races egy versenyvideójáték, amelyet az Appaloosa Interactive fejlesztett PC-re és
+                        PlayStationre, valamint a Velez & Dubail a Game Boy Color számára. 2000-ben az Infogrames adta
+                        ki. </p>
+
+
+                </div>
+
+                <div class="hobbiVideo">
+
+
+                    <iframe src="https://www.youtube.com/embed/sAaP4Q3zLs4" title="YouTube video player" frameborder="0"
+                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                        allowfullscreen class="video"></iframe>
+                </div>
+            </div>
+
+            <div class="hobbi">
+                <div class="hobbiCim">
+                    <h3 class="mediaCim"> Toy Story 2: Buzz Lightyear to the Rescue! </h3>
+                </div>
+                <div class="hobbiUres"></div>
+                <div class="hobbiKiiras">
+
+                    <p> Toy Story 2: Buzz Lightyear to the Rescue egy platformjáték, amely a Pixar 1999-es számítógépes
+                        animációs filmjén, a Toy Story 2-n alapul. 1999 végén jelent meg. </p>
+
+
+                </div>
+
+                <div class="hobbiVideo">
+
+
+                    <iframe src="https://www.youtube.com/embed/E9y3jXpSUwI" title="YouTube video player" frameborder="0"
+                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                        allowfullscreen class="video"></iframe>
+                </div>
+            </div>
+
+
         </aside>
 
+        <div class="also">
+            <div class="lista">
+                <h2 class="ajanlat"> További ajánlatok</h2>
+                <table>
+                    <thead>
+                        <tr>
+                            <td> Platformerek </td>
+                            <td>Kalandjátékok</td>
+                            <td>Stratégiai játékok</td>
+                            <td>Szerepjátékok</td>
+                            <td>Kirakós játékok</td>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td> Super mario Odyssey</td>
+                            <td> Assassin's Creed Brotherhood </td>
+                            <td> Civilization VI </td>
+                            <td> Team FOrtress 2 </td>
+                            <td> Portal 1-2 </td>
+                        </tr>
+                        <tr>
+                            <td> Super Mario Galaxy</td>
+                            <td> Marvel's Spider-Man </td>
+                            <td> Star Wars: Empire at War </td>
+                            <td> Overwatch</td>
+                            <td> Overcooked</td>
+                        </tr>
+                        <tr>
+                            <td> Angry Video Game Nerd Adventures</td>
+                            <td> The Witcher 3: Wild Hunt </td>
+                            <td> State of War </td>
+                            <td> Fire Emblem: Three Houses </td>
+                            <td> Mario + Rabbids Kingdom Battle </td>
+                        </tr>
+                        <tr>
+                            <td> Crash Bandicoot</td>
+                            <td> The Legend of Zelda: Ocarina of Time </td>
+                            <td> Tropico 6 </td>
+                            <td> Final Fantasy VII </td>
+                            <td> SEGA Puyo Puyo Tetris </td>
+                        </tr>
+                        <tr>
+                            <td> The Lion King (videogame) </td>
+                            <td> Dark Souls </td>
+                            <td> Heroes IV </td>
+                            <td> League of Legends </td>
+                            <td> It takes two </td>
+                        </tr>
+                    </tbody>
 
 
-       
+
+
+
+
+
+                </table>
+            </div>
+        </div>
+
+
+
+
+
+
 
         <footer>
             <h4>
-            Mogyoródi Balázs
-        </h4>
+                Mogyoródi Balázs
+            </h4>
         </footer>
     </main>
 </body>
