--- a/film.html
+++ b/film.html
@@ -41,22 +41,22 @@
                 <h2> Miért pont filmek? </h2>
                 <p> Nehéz erre egyszerű magyarázatot adni, ugyanis ennek rengeteg oka van. Próbálok néhány egyértelmű
                     magyarázatot adni erre a kérdésre. <br>
-                    Én elsősorban azért szeretek filmet nézni, mert nagyon jó beszédtémát tud adni. Itt nem arra
+                    Én elsősorban azért szeretek filmet nézni, mert nagyon jó beszéd témát tud adni. Itt nem arra
                     gondolok, hogy kibeszélni miért volt jó, vagy rossz az adott film. Inkább arra, hogy milyen
-                    érzéseket és új gondolatokat gerjeszthet bennem és ezeket megosztani másokkal. <br>
+                    érzéseket és új gondolatokat gerjesztet bennem és ezeket megosztani másokkal. <br>
                     Emellett különböző hatásokat is kivált, ami persze függ a saját hangulatomtól és a film műfajától.
-                    Kiválthat nevetést, megdöbbenést, izgalmat, meghatottságot, vagy akár félelmet. Ezeknek az
-                    élményeknek köszönhetően a filmnézés számomra szórakoztató tevékenység. Nem csak jó filmek lehetnek
-                    rám ilyen hatással, hanem hasonlóan rossz filmek is adhatnak egyfajta élményt. Van, hogy
-                    megbotránkoztat, megnevetett, vagy kínossá teszi a hangulatot. Persze ezek közül csak az a jó, rossz
-                    film, hogy ha megnevetett. Én azt gondolom, hogy azok a filmek amiknél, a másik két film élmény
-                    érvényesül annak is lehet egyfajta pozitív végkifejleti élménye. Persze ez nem a film nézésénél
-                    történik meg, hanem a film kibeszélésénél. <br>
-                    Mivel van egy barátom, aki filmkészítéssel foglalkozik (vagyis tanulja), ezért filmek elemzésével is
-                    szoktam foglalkozni. Ezek a filmek, amiket elsősorban elemzünk, azok más diákok vizsga filmjei. Itt
-                    nem csak a történet logikáira, a fizikai törvények megszegésére gondolok, hanem apró film technikai
-                    apróságokra. Például mennyire jó a vágás, vagy a képi beállás.
-                </p>
+                    Kiválthat nevetést, megdöbbenést, izgalmat, meghatotséágot, vagy akár félelmet. Ezeknek az
+                    élményeknek köszönhetően a filmnézés számomra szórakoztató tevékenység.
+                    Nem csak jó filmek lehetnek rám ilyen hatással, hanem hasonlóan rossz filmek is adhatnak egyfajta
+                    élményt. Van, hogyy megbotránkoztat, megnevetett, vagy kinossá teszi a hangulatot. Persze ezek közül
+                    csak az a jó, rossz film, hogy ha megnevetett. Én azt gondolom, hogy azok a filmek amiknél, a másik
+                    két film élmény érvényesül annak is lehet egyfajat pozitív végkifejleti élmény. Persze ez nem a film
+                    nézésénél történik meg, hanem a film kibeszélésénél. <br>
+                    Mivel van egy barátom, aki film készítéssel foglalkozik (vagyis tanulja), ezért filmek elemzésével
+                    is szoktam foglalkozni. Ezek a filmek amiket elsősorban elemzünk, azok más diákok vizsga filmjei.
+                    Itt nem csak a történet logikáira, a fizikai törvények megszegésére gondolok, hanem apró film
+                    technikai apróságokra. Példál vágás, jelenet fényelése, beálási képek.
+
                 <p> Én emiatt nézek filmeket hobbiból.</p>
 
             </article>
@@ -209,9 +209,9 @@
                 <div class="hobbiUres"></div>
                 <div class="hobbiKiiras">
 
-                    <p> A Csillagok háborúja egy amerikai filmfranchise, amit George Lucas filmrendező alkotott meg, és
-                        a Lucasfilm gyártja. A filmek cselekménye a „réges-régen, egy messzi-messzi galaxisban…” élő
-                        szereplők történetét meséli el. </p>
+                    <p> Star Wars, avagy Csillagok háborúja egy amerikai filmfranchise, amit George Lucas filmrendező
+                        alkotott meg, és
+                        a Lucasfilm gyártja. A a „réges-régen, egy messzi-messzi galaxisban…” játszódik. </p>
 
 
                 </div>
