--- a/jatek.html
+++ b/jatek.html
@@ -41,21 +41,15 @@
                 <h2> Miért pont videojáték? </h2>
                 <p> Nehéz erre egyszerű magyarázatot adni, ugyanis ennek rengeteg oka van. Próbálok néhány egyértelmű
                     magyarázatot adni erre a kérdésre. <br>
-                    Én elsősorban azért szeretek filmet nézni, mert nagyon jó beszéd témát tud adni. Itt nem arra
-                    gondolok, hogy kibeszélni miért volt jó, vagy rossz az adott film. Inkább arra, hogy milyen
-                    érzéseket és új gondolatokat gerjesztet bennem és ezeket megosztani másokkal. <br>
-                    Emellett különböző hatásokat is kivált, ami persze függ a saját hangulatomtól és a film műfajától.
-                    Kiválthat nevetést, megdöbbenést, izgalmat, meghatotséágot, vagy akár félelmet. Ezeknek az
-                    élményeknek köszönhetően a filmnézés számomra szórakoztató tevékenység.
-                    Nem csak jó filmek lehetnek rám ilyen hatással, hanem hasonlóan rossz filmek is adhatnak egyfajta
-                    élményt. Van, hogyy megbotránkoztat, megnevetett, vagy kinossá teszi a hangulatot. Persze ezek közül
-                    csak az a jó, rossz film, hogy ha megnevetett. Én azt gondolom, hogy azok a filmek amiknél, a másik
-                    két film élmény érvényesül annak is lehet egyfajat pozitív végkifejleti élmény. Persze ez nem a film
-                    nézésénél történik meg, hanem a film kibeszélésénél. <br>
-                    Mivel van egy barátom, aki film készítéssel foglalkozik (vagyis tanulja), ezért filmek elemzésével
-                    is szoktam foglalkozni. Ezek a filmek amiket elsősorban elemzünk, azok más diákok vizsga filmjei.
-                    Itt nem csak a történet logikáira, a fizikai törvények megszegésére gondolok, hanem apró film
-                    technikai apróságokra. Példál vágás, jelenet fényelése, beálási képek.
+                    Én elsősorban azért szeretek videojátékokkal játszani, mert nagyon jó kikapcsolódást tudnak
+                    nyújtani. Egyrészt nagyon jó társas élmény, akár online távol, vagy akár egy kanapén másokkal.
+                    Egyedül is jó kikapcsolódás, mert maga egy játék végig játszása is kihívást adhat számomra, aminek
+                    teljesítése nagyszerű élménnyel ajándékoz meg. <br>
+                    Emellett hasonlóan, mint a filmeknél, a történet alapú játékok hasonló hatásokat is ki tud váltani.
+                    Kiválthat hasonlóan a filmekhez nevetést, megdöbbenést, izgalmat, meghatottságot, vagy akár
+                    félelmet. Ezeket az élményeket másokkal megoszthatom, ami igy egy új téma lehetőséget ad társas
+                    beszélgetésekhez. <br>
+                    
                 </p>
                 <p> Én emiatt játszok viedó játékokkal hobbiból.</p>
 
