--- a/projekt.html
+++ b/projekt.html
@@ -25,7 +25,7 @@
                                     class="hobbiLogo"></a>
                         </div>
                     </li>
-                    <li> <a href="http://127.0.0.1:5500/projekt.html"> Projektek</a></li>
+                    <li> <a href="projekt.html"> Projektek</a></li>
                 </ul>
             </nav>
             <header>
