--- a/eleres.html
+++ b/eleres.html
@@ -65,12 +65,7 @@
                                 </a> </h3>
                         </div>
                     </div>
-
-
-
-
-
-
+                </div>
             </article>
         </div>
 
